[project]
name = "web3-bi-dashboard"
version = "2.0.0"
description = "Web3 BI Dashboard for CEX Growth Insights"
requires-python = ">=3.9"
dependencies = [
    "streamlit>=1.29.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "plotly>=5.15.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "vaderSentiment>=3.3.2",
    "scikit-learn>=1.3.0",
    "openai>=1.0.0",
    "streamlit-autorefresh>=1.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
